--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button  id="btn-case-minus"class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input type="number"  id="case-number"min="0" class="form-control text-center" value="1">
+                           <button class="btn btn-default" id="btn-case-plus"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5 id="case-amount">$59</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -79,6 +79,7 @@
          </div>
       </div>
    </section>
+   <script src="./js/case.js"></script>
 </body>
 
 </html>
